namespace VehicleModel;

public enum EnergySource
{
    Gasoline,
    Diesel,
    Electricity
}