namespace VehicleModel;

public enum RoadCondition
{
    Offroad,
    Backroad,
    Highway,
    City
}